--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,12 @@
             <version>2.8.5</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
+            <version>2.1.3.RELEASE</version>
+        </dependency>
+
 
     </dependencies>
 
