--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,7 +15,7 @@ spring:
           enabled: true # 否开启消费者重试（为false时关闭消费者重试，这时消费端代码异常会一直重复收到消息）
           max-interval: 10000ms #最大间隔时间 默认值
           initial-interval: 1000 #重试间隔时间 毫秒，默认1000
-        default-requeue-rejected: false # 重试次数超过上面的设置之后是否丢弃(false不丢弃时需要丢入死信队列)
+        default-requeue-rejected: true # 重试次数超过上面的设置之后是否丢弃(false不丢弃时需要丢入死信队列)
     port: 5672
     # virtual-host: /bbc6.0
     virtual-host: testVirtual
