--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,23 @@
         </dependency>
 
 
+        <!--缓存依赖-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+            <version>2.1.3.RELEASE</version>
+        </dependency>
+
+        <!-- lettuce-core 依赖pool -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-pool2</artifactId>
+            <version>2.6.0</version>
+        </dependency>
+
+
+
+
     </dependencies>
 
     <build>
