--- a/pom.xml
+++ b/pom.xml
@@ -75,9 +75,24 @@
             <version>2.6.0</version>
         </dependency>
 
-
-
-
+        <!-- mongodb相关依赖  -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-mongodb</artifactId>
+            <version>2.3.3.RELEASE</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.mongodb</groupId>
+                    <artifactId>mongodb-driver-sync</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongodb-driver-sync</artifactId>
+            <version>4.0.5</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
