--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
     <properties>
         <java.version>1.8</java.version>
         <docker.image.prefix>springboot</docker.image.prefix>
+        <easypoi.version>2.2.6</easypoi.version>
     </properties>
 
     <dependencies>
@@ -93,6 +94,15 @@
             <version>4.0.5</version>
             <scope>compile</scope>
         </dependency>
+
+
+        <!-- easyExcel 相关mvn  -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>easyexcel</artifactId>
+            <version>${easypoi.version}</version>
+        </dependency>
+
     </dependencies>
 
     <build>
