--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,12 @@
             <version>${easypoi.version}</version>
         </dependency>
 
+        <!-- spring2.0后集成了quartz -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-quartz</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
