--- a/pom.xml
+++ b/pom.xml
@@ -130,6 +130,13 @@
             <version>1.2.4</version>
         </dependency>
 
+        <!-- test -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+        </dependency>
+
     </dependencies>
 
     <build>
